# cpsc256

./: .gitignore  README.md  update
BasketBallScores/: CMakeLists.txt  main.cpp  test.csv  test.csv~
BasketBallScoresInC/: CMakeLists.txt  main.c
MusicMenu/: CMakeLists.txt  main.cpp  songInList.txt
cpsc256/: CMakeLists.txt  FileReader
cpsc256/ArtistAndArtwork/: Artist.cpp  Artwork.h
cpsc256/Documents/: Syllabus_Fall_2023.docx
cpsc256/Examples/ArtistAndArtwork/: Artist.h  Artwork.cpp  main.cpp
cpsc256/Examples/GitHubCoPilot/: main.cpp
cpsc256/Examples/HelloWorld/: main.c
cpsc256/Examples/MultipleClasses/: main.cpp
cpsc256/Examples/SmartPhone/nbproject/private/: private.xml
cpsc256/Examples/Week1/PrimitiveDataTypes/: main.c
cpsc256/Examples/Week2/CSVFileReader/: CSVFileReader  Declarations  FormatSpecifiers  FunctionExample
cpsc256/Examples/Week2/CvsPython/: c_loop  c_loop.c  cython_loop.c  python_loop.py  run_c
cpsc256/Examples/Week2/FileReader/: main.c
cpsc256/Examples/Week3/Declarations/: main.c
cpsc256/Examples/Week3/FileStatistics/: main.c  mean.c  stdev.c
cpsc256/Examples/Week3/FileStatistics_Headers/: FileStatistics  FileStatistics_Headers  functions.h  main.c  mean.c  stdev.c
cpsc256/Examples/Week3/FormatSpecifiers/: main.c
cpsc256/Examples/Week3/FunctionExample/: main.c
cpsc256/Examples/Week4/BasicPointers/: BasicPointers  QuickSort  SimpleCar  VoidPointers  functions.c  functions.h  main.c
cpsc256/Examples/Week4/QuickSort/: main.c
cpsc256/Examples/Week4/VoidPointers/: main.c
cpsc256/Examples/Week5/Restaurant_C_Example/: main.c
cpsc256/Examples/Week6/BasicObjects/: main.cpp
cpsc256/Examples/Week6/HelloWorldCPP/: main.cpp
cpsc256/FormatSpecifiers/nbproject/private/: private.xml
cpsc256/GitHubCoPilot/: main.cpp
cpsc256/Makefile_tutorial/: hello
cpsc256/Zybooks_Ch9_Lab11/nbproject/private/: private.xml
cpsc256/Zybooks_Ch9_Lab9/nbproject/private/: private.xml
uasco/: CMakeLists.txt  main.cpp
